force-app/main/default/objects/smagicinteract__Converse_App__c/smagicinteract__Converse_App__c.object-meta.xml
<CustomObject>
    <description>This is the container object for driving the SMS usage through SMS-Magic in planned manner and should give easy way to control who and how sms-magic will be used. It should also give control on Template usage and should let us serve folder requirement.</description>
    <label>Converse App</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>