force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__Action_Count__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Action_Count__c</fullName>
    <description>This field contains the number of actions in a Comverse App.</description>
    <label>Number of Actions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>