force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__End_Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__End_Date__c</fullName>
    <description>This field contains the end date for Converse App.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>