force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ErrorMessages__c</fullName>
    <description>This field contains the error message encountered in sending messages.</description>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>