force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__ErrorState__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ErrorState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains the value for the checkbox field if an error exists. The value can be TRUE or FALSE.</description>
    <label>Error State</label>
    <type>Checkbox</type>
</CustomField>