force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__Object__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object__c</fullName>
    <description>This field contains the primary object for the Converse App.</description>
    <label>Salesforce Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>