force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__Owner__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the owner of the Converse App.</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Converse_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>