force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__PrimaryType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__PrimaryType__c</fullName>
    <description>This field contains the primary purpose of Converse App. This purpose can be: Manual or Automation.</description>
    <label>PrimaryType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
                <default>true</default>
                <label>Automation</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>