force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__Purpose__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Purpose__c</fullName>
    <description>This field contains the purpose of the Converse App.</description>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>