force-app/main/default/objects/smagicinteract__Converse_App__c/fields/smagicinteract__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Start_Date__c</fullName>
    <description>This field contains the start date of the Converse App.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>